# RAG-For-REDs

./: .gitignore  README.md  SETUP.md  config.py  docker-compose.yml  pyproject.toml
config/: client.py  pipeline_config.py  scraper_config.py  settings.py
evaluation/: questions.py
indexing/: embedder.py  store.py
processing/: chunker.py  cleaner.py  loader.py
retrieval/: baseline.py  classifier.py  enhanced.py  generator.py  reranker.py
scrapers/: base.py  lolalytics.py  patch_notes.py  reddit_scraper.py  wiki.py
scripts/: run_indexing.py  run_processing.py  run_retrieval.py  run_scrapers.py
